musicgen score + debut de readme

--- a/model_use/audioLDM.ipynb
+++ b/model_use/audioLDM.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Dependencies installation"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -368,6 +375,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Cloning the repo of audioLDM"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -394,6 +408,13 @@
       ],
       "source": [
         "!git clone https://github.com/haoheliu/AudioLDM-training-finetuning.git; cd AudioLDM-training-finetuning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Install model's dependencies"
       ]
     },
     {
@@ -701,6 +722,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Retrieve models weights"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "download the weights from the link"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -712,6 +747,13 @@
         "# !mkdir -p ~/content/models_checkpoints/\n",
         "# !wget -O ~/content/models_checkpoints/audioldm-s-full.tar https://zenodo.org/records/14342967/files/checkpoints.tar?download=1\n",
         "# !tar -xvf ~/content/models_checkpoints/audioldm-s-full.tar -C ~/content/models_checkpoints/\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "or get them from your drive"
       ]
     },
     {
@@ -750,6 +792,13 @@
         "!mkdir -p /content/models_checkpoints/\n",
         "\n",
         "!tar -xvf /content/drive/MyDrive/audioldm-s-full.tar -C /content/models_checkpoints/"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "place the weights where its needed"
       ]
     },
     {
@@ -994,6 +1043,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Split the json pena_dataset into train val & test dataset and build a dataset_root file in the expected format to root to the datasets."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
@@ -1084,7 +1140,7 @@
         "id": "zKcK4TSMoVP3"
       },
       "source": [
-        "## MODEL TRAINING"
+        "## Model Training"
       ]
     },
     {
@@ -1135,6 +1191,13 @@
         "import numpy\n",
         "# This tells PyTorch to trust the numpy scalars found in your checkpoint\n",
         "torch.serialization.add_safe_globals([numpy.core.multiarray.scalar])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Fix dependency conflicts"
       ]
     },
     {
@@ -1224,6 +1287,13 @@
       "outputs": [],
       "source": [
         "os.environ[\"WANDB_MODE\"] = \"disabled\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### training"
       ]
     },
     {
@@ -6250,6 +6320,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Save the model weights"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 23,
       "metadata": {
@@ -6303,6 +6380,13 @@
         "    print(f\"Saved to : {destination}\")\n",
         "else:\n",
         "    print(\"Checkpoint file not found.!\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Generate a batch of music wav files "
       ]
     },
     {
