--- a/metrics/Music_Scores.ipynb
+++ b/metrics/Music_Scores.ipynb
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -261,7 +261,7 @@
         "for i, fl in enumerate(files):\n",
         "  wav, fs = torchaudio.load(path + fl)\n",
         "\n",
-        "  for wav_part in split_wav(wav, num_splits=2):\n",
+        "  for wav_part in split_wav(wav, num_splits=2): # cut them into 2 splits to use less cuda memory\n",
         "\n",
         "      wav_stft = get_spectrogram(wav_part)\n",
         "\n",
@@ -292,7 +292,7 @@
         "id": "vaVhc_CER_L_"
       },
       "source": [
-        "## Defining a CNN to get latent representation of spectrograms"
+        "## Defining a CNN to get latent representations of spectrograms"
       ]
     },
     {
@@ -477,7 +477,7 @@
         "id": "pOkL9LLrMink"
       },
       "source": [
-        "### FAD & MMD TESTS\n",
+        "### FAD and MMD metrics Tests\n",
         "\n"
       ]
     },
@@ -527,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -556,7 +556,7 @@
         "music_group1 = musics_tr[:10].unsqueeze(0).transpose(0, 1).cuda()  # shape [B, 1, H, W]\n",
         "music_group2 = musics_test[:10].unsqueeze(0).transpose(0, 1).cuda()\n",
         "\n",
-        "# Get models latents\n",
+        "# Get models latents representations\n",
         "latents1 = None\n",
         "latents2= None\n",
         "with torch.no_grad():\n",
@@ -744,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "9L5E5IACZ1no"
       },
@@ -758,7 +758,7 @@
         "  for i, fl in enumerate(files):\n",
         "    wav, fs = torchaudio.load(path + fl)\n",
         "\n",
-        "    for wav_part in split_wav(wav, num_splits=2):\n",
+        "    for wav_part in split_wav(wav, num_splits=2): # cut them into 2 splits to use less cuda memory\n",
         "\n",
         "        wav_stft = get_spectrogram(wav_part)\n",
         "\n",
