--- a/model_use/audioLDM.ipynb
+++ b/model_use/audioLDM.ipynb
@@ -378,7 +378,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Cloning the repo of audioLDM"
+        "### Cloning the repository of audioLDM"
       ]
     },
     {
@@ -725,7 +725,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Retrieve models weights"
+        "### Retrieve model's weights"
       ]
     },
     {
@@ -798,7 +798,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "place the weights where its needed"
+        "place the weights where it is needed"
       ]
     },
     {
