--- a/utils/labeling.ipynb
+++ b/utils/labeling.ipynb
@@ -1,24 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install panns-inference\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,11 +10,10 @@
         "id": "sS2o6eZmINp8",
         "outputId": "4cf67cca-d128-4251-ad7f-7f94b590058f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting panns-inference\n",
             "  Downloading panns_inference-0.1.1-py3-none-any.whl.metadata (2.4 kB)\n",
@@ -76,13 +59,14 @@
             "Successfully installed panns-inference-0.1.1 torchlibrosa-0.1.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install panns-inference\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!unzip slices.zip -d ./data/"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -90,11 +74,10 @@
         "id": "cXNLtwd89dEa",
         "outputId": "75e9c51b-ff7e-42e2-c854-b547f09b9315"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Archive:  slices.zip\n",
             "  inflating: ./data/slices/slice_1.wav  \n",
@@ -162,59 +145,14 @@
             "  inflating: ./data/slices/slice_9.wav  \n"
           ]
         }
+      ],
+      "source": [
+        "!unzip slices.zip -d ./data/"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import librosa\n",
-        "import numpy as np\n",
-        "from panns_inference import AudioTagging, labels\n",
-        "import torch\n",
-        "\n",
-        "DOSSIER_AUDIO = './data/slices'\n",
-        "\n",
-        "# Créer l'instance du tagger\n",
-        "# checkpoint_path=None va automatiquement télécharger le modèle Cnn14 pré‑entraîné\n",
-        "tagger = AudioTagging(checkpoint_path=None, device='cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "\n",
-        "for nom_fichier in os.listdir(DOSSIER_AUDIO):\n",
-        "    if nom_fichier.endswith('.wav'):\n",
-        "        chemin_audio = os.path.join(DOSSIER_AUDIO, nom_fichier)\n",
-        "        nom_base = os.path.splitext(nom_fichier)[0]\n",
-        "\n",
-        "        print(f\"Traitement de : {nom_fichier}...\")\n",
-        "\n",
-        "        try:\n",
-        "            # Charger l'audio avec librosa (mono, 32000 Hz recommandé)\n",
-        "            audio, sr = librosa.load(chemin_audio, sr=32000, mono=True)\n",
-        "            audio = audio[np.newaxis, :]  # forme (1, samples)\n",
-        "\n",
-        "            # Inference audio tagging\n",
-        "            (clipwise_output, embedding) = tagger.inference(audio)\n",
-        "\n",
-        "            # clipwise_output donne des scores pour les 527 classes AudioSet\n",
-        "            # labels.labels est la liste des labels associée\n",
-        "            tags_trouves = []\n",
-        "            seuil = 0.3\n",
-        "\n",
-        "            for i, score in enumerate(clipwise_output[0]):\n",
-        "                if score >= seuil:\n",
-        "                    tags_trouves.append(labels[i])\n",
-        "\n",
-        "            # Écrire dans un fichier TXT\n",
-        "            chemin_txt = os.path.join(DOSSIER_AUDIO, f\"{nom_base}.txt\")\n",
-        "            with open(chemin_txt, 'w', encoding='utf-8') as f:\n",
-        "                f.write(\" \".join(tags_trouves))\n",
-        "\n",
-        "            print(f\"Tags enregistrés dans : {nom_base}.txt\")\n",
-        "\n",
-        "        except Exception as e:\n",
-        "            print(f\"Erreur avec {nom_fichier} : {e}\")\n",
-        "\n",
-        "print(\"\\nTraitement terminé.\")\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -222,11 +160,10 @@
         "id": "yTwKAztIE5OL",
         "outputId": "7ef1a6f5-fb37-4e67-d8e1-ff4f28358988"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Checkpoint path: /root/panns_data/Cnn14_mAP=0.431.pth\n",
             "Using CPU.\n",
@@ -360,25 +297,68 @@
             "Traitement terminé.\n"
           ]
         }
+      ],
+      "source": [
+        "import os\n",
+        "import librosa\n",
+        "import numpy as np\n",
+        "from panns_inference import AudioTagging, labels\n",
+        "import torch\n",
+        "\n",
+        "DOSSIER_AUDIO = './data/slices'\n",
+        "\n",
+        "# Créer l'instance du tagger\n",
+        "# checkpoint_path=None va automatiquement télécharger le modèle Cnn14 pré‑entraîné\n",
+        "tagger = AudioTagging(checkpoint_path=None, device='cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "for nom_fichier in os.listdir(DOSSIER_AUDIO):\n",
+        "    if nom_fichier.endswith('.wav'):\n",
+        "        chemin_audio = os.path.join(DOSSIER_AUDIO, nom_fichier)\n",
+        "        nom_base = os.path.splitext(nom_fichier)[0]\n",
+        "\n",
+        "        print(f\"Traitement de : {nom_fichier}...\")\n",
+        "\n",
+        "        try:\n",
+        "            # load audio\n",
+        "            audio, sr = librosa.load(chemin_audio, sr=32000, mono=True)\n",
+        "            audio = audio[np.newaxis, :]  # forme (1, samples)\n",
+        "\n",
+        "            # Inference audio tagging\n",
+        "            (clipwise_output, embedding) = tagger.inference(audio)\n",
+        "\n",
+        "            tags_trouves = []\n",
+        "            seuil = 0.3\n",
+        "\n",
+        "            for i, score in enumerate(clipwise_output[0]):\n",
+        "                if score >= seuil:\n",
+        "                    tags_trouves.append(labels[i])\n",
+        "\n",
+        "            # write results in a txt file\n",
+        "            chemin_txt = os.path.join(DOSSIER_AUDIO, f\"{nom_base}.txt\")\n",
+        "            with open(chemin_txt, 'w', encoding='utf-8') as f:\n",
+        "                f.write(\" \".join(tags_trouves))\n",
+        "\n",
+        "            print(f\"Tags enregistrés dans : {nom_base}.txt\")\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"Erreur avec {nom_fichier} : {e}\")\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!zip -r \"./labelled_dataset.zip\" './data/slices'"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "mOtfBD_UJ7XJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mOtfBD_UJ7XJ",
         "outputId": "1ef9ed18-c356-4f9c-999a-4781f8c4acbb"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "  adding: data/slices/ (stored 0%)\n",
             "  adding: data/slices/slice_40.wav (deflated 12%)\n",
@@ -509,7 +489,24 @@
             "  adding: data/slices/slice_12.txt (deflated 21%)\n"
           ]
         }
+      ],
+      "source": [
+        "!zip -r \"./labelled_dataset.zip\" './data/slices'"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
